--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,18 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 server.port=8083
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/gimnasio
+
+# Keycloak configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/gimnasio
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
-keycloak.auth-server-url=http://keycloak:8080/auth
+keycloak.auth-server-url=http://localhost:8080/auth
 keycloak.realm=gimnasio
 keycloak.resource=class-service 
 keycloak.public-client=false 
 keycloak.credentials.secret=txaBZy9yNLlHY9ufQS6Z3dkTPNk7ZHDU 
 logging.level.org.springframework.security=DEBUG 
+
+# Kafka configuration
+spring.kafka.bootstrap-servers=localhost:29092 
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer 
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer 
