--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,6 @@ spring.rabbitmq.password=admin
 logging.level.org.springframework.security=DEBUG 
 
 # Kafka configuration
-spring.kafka.bootstrap-servers=localhost:29092 
+spring.kafka.bootstrap-servers=kafka:9092 
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer 
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer 
