--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
 			<groupId>org.springframework.kafka</groupId> 
 			<artifactId>spring-kafka</artifactId> 
 		</dependency>
+		<dependency> 
+			<groupId>org.springframework.cloud</groupId> 
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>4.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
