--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# # Spring Boot Application Properties for Class Service
 spring.application.name=class-service
 spring.datasource.url=jdbc:h2:mem:classdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -6,6 +7,8 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 server.port=8083
+
+# Keycloak Configuration
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/gimnasio
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/realms/gimnasio/protocol/openid-connect/certs
 keycloak.auth-server-url=http://keycloak:8080/auth
@@ -19,10 +22,16 @@ logging.level.org.springframework.security=DEBUG
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
-spring.rabbitmq.password=admin 
+spring.rabbitmq.password=admin
 logging.level.org.springframework.security=DEBUG 
 
 # Kafka configuration
 spring.kafka.bootstrap-servers=kafka:9092 
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer 
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer 
+
+# Eureka Client Configuration
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka/
+eureka.instance.hostname=class-service
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
